Add initial dependencies

--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "test": "node test/test.js",
     "pretest": "yarn build"
   },
-  "files":[
+  "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "immer": "^1.1.1",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0"
+  }
 }
