--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "immer": "^1.1.1",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "selectorator": "^3.2.0"
   }
 }
