--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@acemarke/redux-starter-kit",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A simple set of tools to make using Redux easier",
+  "repository": "https://github.com/markerikson/redux-starter-kit",
   "main": "dist/redux-starter-kit.cjs.js",
   "module": "dist/redux-starter-kit.esm.js",
   "browser": "dist/redux-starter-kit.umd.js",
