Added transpilation steps for UMD and CJS builds

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "rollup": "^0.56.3",
+    "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.3.0",
     "rollup-plugin-node-resolve": "^3.0.3"
   },
