Switch from yarn to npm
Redux recently switch back to npm 5 from yarn, so I'd prefer to be consistent
with their source in case we merge back into the main repository. I'm also
working on add examples based on the existing Redux examples, which are also
using npm lock files.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "rollup -c",
     "dev": "rollup -c -w",
     "test": "node test/test.js",
-    "pretest": "yarn build"
+    "pretest": "npm run build"
   },
   "files": [
     "dist"
