--- a/example/package.json
+++ b/example/package.json
@@ -8,11 +8,11 @@
     "react-scripts": "^1.0.2"
   },
   "dependencies": {
+    "@acemarke/redux-starter-kit": "0.0.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.0",
     "react-dom": "^15.5.0",
-    "react-redux": "^5.0.5",
-    "redux": "^3.5.2"
+    "react-redux": "^5.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
