Configure Travis with a basic build script

--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "node test/test.js",
-    "pretest": "npm run build"
+    "test": "npm run build"
   },
   "files": [
     "dist"
