--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "browser": "dist/redux-starter-kit.umd.js",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
-  "private": false,
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.6.1",
     "rollup": "^0.56.3",
     "rollup-plugin-babel": "^3.0.3",
@@ -22,6 +22,7 @@
     "test": "node test/test.js",
     "pretest": "npm run build"
   },
+  "repository": "markerikson/redux-starter-kit",
   "files": [
     "dist"
   ],
@@ -31,5 +32,6 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "selectorator": "^3.3.0"
-  }
+  },
+  "sideEffects": false
 }
