Use Redux's prepare script

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "node test/test.js",
-    "pretest": "npm run build"
+    "format": "prettier --write \"**/*.{js,md}\"",
+    "format:check": "prettier --list-different \"**/*.{js,md}\"",
+    "lint": "eslint src",
+    "prepare": "npm run format:check && npm run lint && npm run build"
   },
   "files": [
     "dist"
