--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "npm run build"
+    "format": "prettier --write \"**/*.{js,md}\"",
+    "format:check": "prettier --list-different \"**/*.{js,md}\"",
+    "lint": "eslint src",
+    "prepare": "npm run format:check && npm run lint && npm run build"
   },
   "repository": "markerikson/redux-starter-kit",
   "files": [
