--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "private": false,
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.1",
     "babel-preset-env": "^1.6.1",
+    "jest": "^22.4.2",
     "rollup": "^0.56.3",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.3.0",
@@ -19,7 +21,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "test": "node test/test.js",
+    "test": "jest",
     "pretest": "npm run build"
   },
   "files": [
@@ -31,5 +33,8 @@
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0",
     "selectorator": "^3.3.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
