Set up external helpers in Babel config

--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,9 @@
     ]
   ],
   "env": {
+    "development": {
+      "plugins": ["external-helpers"]
+    },
     "test": {
       "plugins": ["transform-es2015-modules-commonjs"]
     }
