--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,1 @@
-{
-  "compilerOptions": { "allowJs": true, "checkJs": true, "noEmit": true },
-  "exclude": ["**/*.test.js", "dist", "rollup.config.js"]
-}
+{ "compilerOptions": { "noEmit": true } }
