--- a/package.json
+++ b/package.json
@@ -8,15 +8,16 @@
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^22.2.3",
-    "jest": "^22.4.2",
+    "@types/jest": "^23.3.1",
+    "babel-jest": "^23.4.2",
+    "jest": "^23.5.0",
     "prettier": "^1.10.2",
     "rollup": "^0.56.3",
     "rollup-plugin-commonjs": "^8.3.0",
     "rollup-plugin-node-resolve": "^3.0.3",
     "rollup-plugin-typescript": "^0.8.1",
-    "ts-jest": "^22.4.4",
-    "typescript": "^2.8.3"
+    "ts-jest": "^23.1.4",
+    "typescript": "^3.0.1"
   },
   "scripts": {
     "build": "rollup -c",
