--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^23.3.1",
+    "@types/node": "^10.9.2",
     "babel-jest": "^23.4.2",
     "jest": "^23.5.0",
     "prettier": "^1.10.2",
