--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "rollup": "^0.56.3",
     "rollup-plugin-babel": "^3.0.3",
     "rollup-plugin-commonjs": "^8.3.0",
-    "rollup-plugin-node-resolve": "^3.0.3"
+    "rollup-plugin-node-resolve": "^3.0.3",
+    "rollup-plugin-replace": "^2.1.0"
   },
   "scripts": {
     "build": "rollup -c",
@@ -42,6 +43,7 @@
     "immer": "^1.1.3",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.3",
+    "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
     "selectorator": "^3.3.0"
   },
