--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/preset-typescript": "^7.1.0",
     "@types/jest": "^23.3.12",
     "@types/node": "^10.12.18",
+    "@types/redux-immutable-state-invariant": "^2.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^4.17.0",
