Port index.js to TS and add index.d.ts

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "tsc": "tsc"
   },
   "files": [
-    "dist"
+    "dist",
+    "index.d.ts"
   ],
   "dependencies": {
     "immer": "^1.9.3",
