--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "format": "prettier --write \"**/*.{js,md}\"",
-    "format:check": "prettier --list-different \"**/*.{js,md}\"",
+    "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
+    "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
     "lint": "eslint src",
     "prepare": "npm run lint && npm test && npm run build",
     "test": "jest",
