--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "redux-starter-kit",
-  "version": "0.3.3",
+  "version": "0.4.0-0",
   "description": "A simple set of tools to make using Redux easier",
   "repository": "https://github.com/markerikson/redux-starter-kit",
   "main": "dist/redux-starter-kit.cjs.js",
