Configure ESLint for TypeScript
For now, we need to use the Git version of typescript-eslint-parser
because the last release only supports TypeScript 3.1. A new release
is planned for any day now, so we should be able to move to an NPM
release soon.

https://github.com/eslint/typescript-eslint-parser/pull/596

As ESLint's no-unused-vars doesn't work well with TypeScript, I
enabled noUnusedLocals and noUnusedParameters on the TypeScript
side instead.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
     "typescript": "^3.2.2",
+    "typescript-eslint-parser": "eslint/typescript-eslint-parser",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
@@ -37,7 +38,7 @@
     "dev": "rollup -c -w",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
-    "lint": "eslint src",
+    "lint": "eslint 'src/**/*.ts'",
     "prepare": "npm run tsc && npm run lint && npm test && npm run build",
     "test": "jest",
     "tsc": "tsc"
