Revert "Generate TypeScript declaration files in dist/"
This reverts commit e449c8a78a501920c0d96705f81b46f8870e4e6a.

--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "eslint-plugin-react": "^7.6.1",
     "jest": "^22.4.2",
     "prettier": "^1.10.2",
-    "rimraf": "^2.6.3",
     "rollup": "^1.0.2",
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^9.2.0",
@@ -40,10 +39,9 @@
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
     "lint": "eslint 'src/**/*.ts'",
-    "prepare": "npm run tsc && npm run lint && npm test && npm run build && npm run tsc:declarations",
+    "prepare": "npm run tsc && npm run lint && npm test && npm run build",
     "test": "jest",
-    "tsc": "tsc --noEmit",
-    "tsc:declarations": "tsc -d --emitDeclarationOnly && rimraf 'dist/*.test.d.ts'"
+    "tsc": "tsc"
   },
   "files": [
     "dist",
