Publish src/ for TypeScript typings

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
   },
   "files": [
     "dist",
-    "index.d.ts"
+    "index.d.ts",
+    "src"
   ],
   "dependencies": {
     "immer": "^1.10.5",
