--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,17 @@
 {
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "emitDeclarationOnly": true,
     "esModuleInterop": true,
+    "declaration": true,
     "module": "es2015",
     "moduleResolution": "node",
-    "noEmit": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "outDir": "dist",
     "strict": true,
     "target": "es2018"
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/*.test.ts"]
 }
