--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/jest": "^23.3.12",
     "@types/node": "^10.12.18",
     "@types/redux-immutable-state-invariant": "^2.1.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^4.17.0",
@@ -29,8 +30,7 @@
     "rollup-plugin-babel": "^4.2.0",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-node-resolve": "^4.0.0",
-    "typescript": "^3.2.2",
-    "typescript-eslint-parser": "eslint/typescript-eslint-parser",
+    "typescript": "^3.4.3",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
