--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/redux-starter-kit.cjs.js",
   "module": "dist/redux-starter-kit.esm.js",
   "unpkg": "dist/redux-starter-kit.umd.js",
+  "types": "dist/typings.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
@@ -45,7 +46,6 @@
   },
   "files": [
     "dist",
-    "index.d.ts",
     "src"
   ],
   "dependencies": {
