--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "dev": "rollup -c -w",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
-    "lint": "eslint 'src/**/*.ts'",
+    "lint": "eslint \"src/**/*.ts\"",
     "prepare": "npm run tsc && npm run lint && npm test && npm run build",
     "test": "jest",
     "tsc": "tsc"
