feat(configureStore): add support for `devTools` option accepting `EnhancerOptions` (#130)
* feat(configureStore): add support for `devTools` option accepting `EnhancerOptions`

This is adding the code support for passing in `EnhancerOptions` from `redux-devtools-extension` for
further customization.
https://github.com/zalmoxisus/redux-devtools-extension/blob/master/docs/API/Arguments.md#windowdevtoolsextensionconfig

fix #40

* docs(configureStore): update doc entry for `devTools` option

* Fix lint command

* Bum Prettier version

* Fix formatting

* Tweak devtools options docs for clarity

--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-typescript": "^7.1.0",
-    "@types/jest": "^23.3.12",
-    "@types/node": "^10.12.18",
+    "@babel/core": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.11",
+    "@types/node": "^10.14.4",
     "@types/redux-immutable-state-invariant": "^2.1.0",
     "@typescript-eslint/parser": "^1.6.0",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^4.17.0",
-    "eslint-config-react-app": "^2.1.0",
-    "eslint-plugin-flowtype": "^2.44.0",
-    "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.6.1",
-    "jest": "^22.4.2",
-    "prettier": "^1.10.2",
-    "rollup": "^1.0.2",
-    "rollup-plugin-babel": "^4.2.0",
-    "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^3.0.8",
+    "eslint-plugin-flowtype": "^3.5.1",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
+    "jest": "^24.7.1",
+    "prettier": "^1.17.0",
+    "react": "^16.8.6",
+    "rollup": "^1.9.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.3.4",
+    "rollup-plugin-node-resolve": "^4.2.0",
     "typescript": "^3.4.3",
     "typings-tester": "^0.3.2"
   },
@@ -39,7 +39,7 @@
     "dev": "rollup -c -w",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
-    "lint": "eslint 'src/**/*.ts'",
+    "lint": "eslint \"src/**/*.ts\"",
     "prepare": "npm run tsc && npm run lint && npm test && npm run build",
     "test": "jest",
     "tsc": "tsc"
@@ -51,10 +51,10 @@
   "dependencies": {
     "immer": "^2.1.5",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.7",
+    "redux-devtools-extension": "^2.13.8",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
-    "selectorator": "^4.0.1"
+    "selectorator": "^4.0.3"
   },
   "jest": {
     "testEnvironment": "node",
