Rework UMD build process to fix multiple issues
- Added replace of "process" usage in dev build to fix crashes
- Added minified production UMD build
- Restructured conditional import of immutable middleware so that
  each build works correctly:
  - CJS/ESM: use conditional require in dev/prod, with shaking
  - UMD Dev: use import statement to pull in middleware
  - UMD Prod: drop middleware completely

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/markerikson/redux-starter-kit",
   "main": "dist/redux-starter-kit.cjs.js",
   "module": "dist/redux-starter-kit.esm.js",
-  "unpkg": "dist/redux-starter-kit.umd.js",
+  "unpkg": "dist/redux-starter-kit.umd.min.js",
   "types": "dist/typings.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
