--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "https://github.com/markerikson/redux-starter-kit",
   "main": "dist/redux-starter-kit.cjs.js",
   "module": "dist/redux-starter-kit.esm.js",
-  "unpkg": "dist/redux-starter-kit.umd.js",
+  "unpkg": "dist/redux-starter-kit.umd.min.js",
   "types": "dist/typings.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
@@ -30,7 +30,8 @@
     "rollup": "^1.9.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.0",
+    "rollup-plugin-node-resolve": "^4.2.4",
+    "rollup-plugin-strip-code": "^0.2.6",
     "typescript": "^3.4.3",
     "typings-tester": "^0.3.2"
   },
@@ -54,6 +55,8 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^5.1.1",
     "selectorator": "^4.0.3"
   },
   "jest": {
