Re-enable format checks

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
     "lint": "eslint \"src/**/*.ts\"",
-    "prepare": "npm run tsc && npm run lint && npm test && npm run build",
+    "prepare": "npm run tsc && npm run lint && npm run format:check && npm test && npm run build",
     "test": "jest",
     "tsc": "tsc"
   },
