Remove Selectorator and add explicit Reselect dependency

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
-    "selectorator": "^4.0.3"
+    "reselect": "^4.0.0"
   },
   "jest": {
     "testEnvironment": "node",
