--- a/package.json
+++ b/package.json
@@ -10,42 +10,26 @@
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
-    "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.11",
     "@types/node": "^10.14.4",
     "@types/redux-immutable-state-invariant": "^2.1.1",
-    "@typescript-eslint/parser": "^1.6.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-config-react-app": "^3.0.8",
-    "eslint-plugin-flowtype": "^3.5.1",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4",
-    "jest": "^24.7.1",
+    "eslint-config-react-app": "^5.0.1",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
-    "rollup": "^1.9.0",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^9.3.4",
-    "rollup-plugin-node-resolve": "^4.2.4",
-    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-strip-code": "^0.2.6",
-    "rollup-plugin-terser": "^5.1.1",
-    "typescript": "^3.4.3",
+    "tsdx": "^0.9.3",
+    "tslib": "^1.10.0",
+    "typescript": "^3.6.3",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w",
+    "build": "tsdx build --format cjs,esm,umd",
+    "dev": "tsdx watch  --format cjs,esm,umd",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
-    "lint": "eslint \"src/**/*.ts\"",
-    "prepare": "npm run tsc && npm run lint && npm run format:check && npm test && npm run build",
-    "test": "jest",
-    "tsc": "tsc"
+    "lint": "tsdx lint src",
+    "prepare": "npm run lint && npm run format:check && npm test && npm run build",
+    "test": "tsdx test"
   },
   "files": [
     "dist",
@@ -58,18 +42,6 @@
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^4.0.0"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "json"
-    ],
-    "testRegex": "^.+\\.test\\.(ts|js)$",
-    "transform": {
-      "^.+\\.(ts|js)$": "babel-jest"
-    }
   },
   "sideEffects": false
 }
