--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.5.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^10.14.4",
     "@types/redux-immutable-state-invariant": "^2.1.1",
