--- a/website/package.json
+++ b/website/package.json
@@ -2,17 +2,14 @@
   "scripts": {
     "start": "docusaurus start",
     "build": "docusaurus build",
-    "publish-gh-pages": "docusaurus publish",
-    "write-translations": "docusaurus write-translations",
-    "version": "docusaurus version",
-    "rename-version": "docusaurus rename-version"
+    "publish-gh-pages": "docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.30",
     "@docusaurus/preset-classic": "^2.0.0-alpha.30",
     "classnames": "^2.2.6",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2"
   },
   "browserslist": {
     "production": [
