Update package name in config files

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "redux-starter-kit",
+  "name": "redux-toolkit",
   "version": "1.0.1",
   "description": "A simple set of tools to make using Redux easier",
-  "repository": "https://github.com/reduxjs/redux-starter-kit",
+  "repository": "https://github.com/reduxjs/redux-toolkit",
   "main": "dist/index.js",
-  "module": "dist/redux-starter-kit.esm.js",
-  "unpkg": "dist/redux-starter-kit.umd.min.js",
+  "module": "dist/redux-toolkit.esm.js",
+  "unpkg": "dist/redux-toolkit.umd.min.js",
   "types": "dist/index.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
