Rename RSK to Redux Toolkit (#250)
* Rework Quick Start and Usage Guide

* Update sidebar to rename Usage and remove "Examples"

* Update tutorials, except for sandbox links

* Update API docs

* Update Docusaurus site config

* Update test issue URLs

* Update package name in config files

* Update README

* Clean up irrelevant redirects and dead examples page

* Change UMD global name

* Try aligning badges

* More alignment

* Aligning...

* Mark scoped package as public

* Fix package name

* 1.0.2

* Update description

* Add netlify.toml file for build preview

* Fix CodeSandbox CI file

* Really fix package name i mean it

* 1.0.3

--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "redux-starter-kit",
-  "version": "1.0.1",
-  "description": "A simple set of tools to make using Redux easier",
-  "repository": "https://github.com/reduxjs/redux-starter-kit",
+  "name": "@reduxjs/toolkit",
+  "version": "1.0.3",
+  "description": "The official, opinionated, batteries-included toolset for efficient Redux development",
+  "repository": "https://github.com/reduxjs/redux-toolkit",
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/index.js",
-  "module": "dist/redux-starter-kit.esm.js",
-  "unpkg": "dist/redux-starter-kit.umd.min.js",
+  "module": "dist/redux-toolkit.esm.js",
+  "unpkg": "dist/redux-toolkit.umd.min.js",
   "types": "dist/index.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
