--- a/website/package.json
+++ b/website/package.json
@@ -3,7 +3,8 @@
     "start": "docusaurus start",
     "build": "docusaurus build",
     "swizzle": "docusaurus swizzle",
-    "publish-gh-pages": "docusaurus deploy"
+    "publish-gh-pages": "docusaurus deploy",
+    "deploy": "docusaurus deploy"
   },
   "dependencies": {
     "@docusaurus/core": "^2.0.0-alpha.34",
