--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^24.0.11",
     "@types/node": "^10.14.4",
     "@types/redux-immutable-state-invariant": "^2.1.1",
+    "console-testing-library": "^0.2.2",
     "eslint-config-react-app": "^5.0.1",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
