--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
   "main": "dist/index.js",
   "module": "dist/redux-toolkit.esm.js",
   "unpkg": "dist/redux-toolkit.umd.min.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/typings.d.ts",
   "author": "Mark Erikson <mark@isquaredsoftware.com>",
   "license": "MIT",
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.7.0",
     "@types/jest": "^24.0.11",
     "@types/node": "^10.14.4",
     "@types/redux-immutable-state-invariant": "^2.1.1",
@@ -31,24 +32,25 @@
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "rollup-plugin-strip-code": "^0.2.6",
-    "tsdx": "^0.10.5",
+    "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
     "typescript": "^3.6.3",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
-    "build": "tsdx build --format cjs,esm,umd --name redux-toolkit",
+    "build-ci": "tsdx build --format cjs,esm,umd --name redux-toolkit; api-extractor run",
+    "build": "   tsdx build --format cjs,esm,umd --name redux-toolkit; api-extractor run --local",
     "dev": "tsdx watch  --format cjs,esm,umd",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
     "lint": "tsdx lint src",
-    "prepare": "npm run lint && npm run format:check && npm test && npm run build",
+    "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci",
     "test": "tsdx test"
   },
   "files": [
     "dist/*.js",
     "dist/*.js.map",
-    "dist/index.d.ts",
+    "dist/typings.d.ts",
     "src"
   ],
   "dependencies": {
