--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
     "typings-tester": "^0.3.2"
   },
   "scripts": {
-    "build-ci": "tsdx build --format cjs,esm,umd --name redux-toolkit; api-extractor run",
-    "build": "   tsdx build --format cjs,esm,umd --name redux-toolkit; api-extractor run --local",
+    "build-ci": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run",
+    "build": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run --local",
     "dev": "tsdx watch  --format cjs,esm,umd",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
     "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
