--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "src"
   ],
   "dependencies": {
+    "@types/nanoid": "^2.1.0",
     "immer": "^4.0.1",
+    "nanoid": "^2.1.11",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-immutable-state-invariant": "^2.1.0",
