--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,7 @@
 [build]
   base    = "website"
   publish = "website/build"
-  command = "yarn build"
+  command = "npm run build"
+
+[build.environment]
+NODE_VERSION = "10"
