--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reduxjs/toolkit",
-  "version": "1.2.5",
+  "version": "1.3.0-alpha.7",
   "description": "The official, opinionated, batteries-included toolset for efficient Redux development",
   "repository": "https://github.com/reduxjs/redux-toolkit",
   "keywords": [
@@ -54,7 +54,9 @@
     "src"
   ],
   "dependencies": {
+    "@types/nanoid": "^2.1.0",
     "immer": "^4.0.1",
+    "nanoid": "^2.1.11",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.8",
     "redux-immutable-state-invariant": "^2.1.0",
