--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "build": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run --local",
     "dev": "tsdx watch  --format cjs,esm,umd",
     "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
-    "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
+    "format:check": "prettier --list-different \"src/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
     "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci",
     "test": "tsdx test"
