--- a/package.json
+++ b/package.json
@@ -24,11 +24,15 @@
   "license": "MIT",
   "devDependencies": {
     "@microsoft/api-extractor": "^7.7.0",
+    "@types/invariant": "^2.2.31",
     "@types/jest": "^24.0.11",
+    "@types/json-stringify-safe": "^5.0.0",
     "@types/node": "^10.14.4",
     "@types/redux-immutable-state-invariant": "^2.1.1",
     "console-testing-library": "^0.3.1",
     "eslint-config-react-app": "^5.0.1",
+    "invariant": "^2.2.4",
+    "json-stringify-safe": "^5.0.1",
     "prettier": "^1.18.2",
     "react": "^16.8.6",
     "rollup-plugin-strip-code": "^0.2.6",
