TS dep updates (#386)
* Update createEntityAdapter type reference

* Update TypeScript and Prettier to latest

* Prettier reformatting

--- a/package.json
+++ b/package.json
@@ -32,20 +32,20 @@
     "eslint-config-react-app": "^5.0.1",
     "invariant": "^2.2.4",
     "json-stringify-safe": "^5.0.1",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "react": "^16.8.6",
     "rollup-plugin-strip-code": "^0.2.6",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.6.3",
+    "typescript": "^3.8.2",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
     "build-ci": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run",
     "build": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run --local",
     "dev": "tsdx watch  --format cjs,esm,umd",
-    "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
-    "format:check": "prettier --list-different \"src/*.ts\" \"docs/*/**.md\"",
+    "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
+    "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
     "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci",
     "test": "tsdx test"
