--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "src"
   ],
   "dependencies": {
-    "immer": "^4.0.1",
-    "nanoid": "^2.1.11",
+    "immer": "^6.0.0-alpha.4",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
