--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base    = "website"
-  publish = "website/build"
+  publish = "build"
   command = "npm run build"
 
 [build.environment]
