--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@reduxjs/toolkit",
-  "version": "1.2.5",
+  "version": "1.3.0-beta.1",
   "description": "The official, opinionated, batteries-included toolset for efficient Redux development",
   "repository": "https://github.com/reduxjs/redux-toolkit",
   "keywords": [
@@ -25,24 +25,28 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.7.0",
     "@types/jest": "^24.0.11",
+    "@types/json-stringify-safe": "^5.0.0",
+    "@types/nanoid": "^2.1.0",
     "@types/node": "^10.14.4",
-    "@types/redux-immutable-state-invariant": "^2.1.1",
+    "axios": "^0.19.2",
     "console-testing-library": "^0.3.1",
     "eslint-config-react-app": "^5.0.1",
-    "prettier": "^1.18.2",
+    "invariant": "^2.2.4",
+    "json-stringify-safe": "^5.0.1",
+    "prettier": "^1.19.1",
     "react": "^16.8.6",
     "rollup-plugin-strip-code": "^0.2.6",
     "tsdx": "^0.11.0",
     "tslib": "^1.10.0",
-    "typescript": "^3.6.3",
+    "typescript": "^3.8.2",
     "typings-tester": "^0.3.2"
   },
   "scripts": {
     "build-ci": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run",
     "build": "tsdx build --format cjs,esm,umd --name redux-toolkit && api-extractor run --local",
     "dev": "tsdx watch  --format cjs,esm,umd",
-    "format": "prettier --write \"src/*.ts\" \"**/*.md\"",
-    "format:check": "prettier --list-different \"src/*.ts\" \"**/*.md\"",
+    "format": "prettier --write \"src/**/*.ts\" \"**/*.md\"",
+    "format:check": "prettier --list-different \"src/**/*.ts\" \"docs/*/**.md\"",
     "lint": "tsdx lint src",
     "prepare": "npm run lint && npm run format:check && npm test && npm run build-ci",
     "test": "tsdx test"
@@ -54,10 +58,8 @@
     "src"
   ],
   "dependencies": {
-    "immer": "^4.0.1",
+    "immer": "^6.0.1",
     "redux": "^4.0.0",
-    "redux-devtools-extension": "^2.13.8",
-    "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0"
   },
