--- a/netlify.toml
+++ b/netlify.toml
@@ -2,6 +2,7 @@
   base    = "website"
   publish = "build"
   command = "npm run build"
+  ignore = "git diff --quiet HEAD^ HEAD docs website"
 
 [build.environment]
 NODE_VERSION = "10"
